image-bird.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-bird-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: image-bird
  template:
    metadata:
      labels:
        app: image-bird
    spec:
      containers:
      - name: image-bird
        image: ghcr.io/image-bird/image-bird:release
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /api/v1/ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: image-bird-service
spec:
  selector:
    app: image-bird
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
